--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -7,22 +7,7 @@
     <script src="./coffee/require.config.js"></script>
     <script src="./coffee/Main.js"></script>
 
-    <style>
-        html, body {
-            width: 100%;
-            height: 100%;
-            margin:0;
-            padding:0;
-            border: 0;
-        }
-
-        #puzzle {
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./less/.less.base.css" />
 </head>
 <body>
     <div id="puzzle">
