--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -7,7 +7,7 @@
     <script src="./coffee/require.config.js"></script>
     <script src="./coffee/Main.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="./less/.less.base.css" />
+    <link rel="stylesheet" type="text/css" href="/puzzle/less/.less.base.css" />
 </head>
 <body>
     <div id="puzzle">
