--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Super Indie-logical game for small & stupid creatures</title>
     <script data-main="" src="/bower_components/requirejs/require.js"></script>
-    <script src="./coffee/require.config.js"></script>
-    <script src="./coffee/Main.js"></script>
+    <script src="coffee/require.config.js"></script>
+    <script src="coffee/Main.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="/puzzle/less/.less.base.css" />
+    <link rel="stylesheet" type="text/css" href="less/less.base.css" />
 </head>
 <body>
     <div id="puzzle">
